option/oke/ingress-app.yaml
# Use 2 Ingress since the parameter replacement work differently in NGINX for / and /app (see annotation)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ##PREFIX##-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2    
    # nginx.ingress.kubernetes.io/affinity: "cookie"   
    # nginx.ingress.kubernetes.io/session-cookie-path: "/"    
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /##PREFIX##/app(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ##PREFIX##-app-service
                port:
                  number: 80
