option/oke/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ##PREFIX##-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2   
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /##PREFIX##(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ##PREFIX##-ui-service
                port:
                  number: 80
